--- a/html/products.html
+++ b/html/products.html
@@ -363,10 +363,10 @@
                         </div>
                     </div>
 
-                    <button
+                   <a href="/html/payment.html"> <button
                         class="primary-bg text-white px-6 py-3 rounded-lg font-bold shadow-md hover:bg-opacity-90 transition-all transform hover:-translate-y-0.5 mt-4">
                         ساهم في الحملة الآن
-                    </button>
+                    </button></a>
                 </div>
                 <div class="md:w-1/3">
                     <img src="https://mir-s3-cdn-cf.behance.net/projects/404/bc8674180299517.Y3JvcCw5OTksNzgyLDAsMTA4.jpg"
