--- a/html/product-details.html
+++ b/html/product-details.html
@@ -156,7 +156,7 @@
                                 <span class="absolute left-50 top-3 text-gray-500">دينار أردني</span>
                             </div>
 
-<a href="/html/payment.html">
+<a href="payment.html">
                             <button id="donateButton"
                                 class="primary-bg text-white py-3 px-8 rounded-lg font-bold text-lg shadow-md hover:bg-opacity-90 transition-all transform hover:-translate-y-0.5 w-full md:w-auto">
                                 تبرع الآن
